@@ -72,11 +72,11 @@ int EVP_SealInit(EVP_CIPHER_CTX *ctx, EVP_CIPHER *type, unsigned char **ek,
 	unsigned char key[EVP_MAX_KEY_LENGTH];
 	int i;
 	
-	if (npubk <= 0) return(0);
 	if(type) {
 		EVP_CIPHER_CTX_init(ctx);
 		EVP_EncryptInit(ctx,type,NULL,NULL);
 	}
+	if (npubk <= 0) return(0);
 	if (RAND_bytes(key,EVP_MAX_KEY_LENGTH) <= 0)
 		return(0);
 	if (EVP_CIPHER_CTX_iv_length(ctx))
